--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <main role="main" class="container">
       <div class="content">
         <h1>channel: #<span id="channel-name"></span></h1>
+        <small>Your contact code: <span id="contact-code"></span></small>
         <div id="chat-area">
           <ul id="chat-text">
           </ul>
